# goofy-os

./: Cargo.toml  README.md  TODO.md  build.rs  debug.gdb
.cargo/: config.toml
.github/workflows/: pages.yml
config/src/: lib.rs
docs/: Gemfile  README.md  _config.yml  index.md
example_program/: test.rs  test_fibonacci.rs
kernel/: Cargo.toml  build.rs  test.elf
kernel/src/: allocator.rs  apic.rs  config.rs  errno.rs  framebuffer.rs  gdt.rs  init.rs  interrupts.rs  lib.rs  main.rs  memory.rs  process.rs  surface.rs  sysinfo.rs  time.rs  user_program_loader.rs
kernel/src/arch/x86_64/: interrupts.rs  irq.rs  mod.rs
kernel/src/desktop/: application.rs  calculator.rs  filemanager.rs  input.rs  keyboard.rs  main.rs  mod.rs  notepad.rs  sysinfo.rs  terminal.rs  tictactoe.rs  window_manager.rs
kernel/src/drivers/: serial.rs
kernel/src/fs/: disk.rs  fat32.rs  manager.rs  mod.rs
kernel/src/kernel_processes/: keyboard.rs
kernel/src/syscalls/: exit.rs  mod.rs  write.rs
kernel/src/tasks/: mod.rs  scheduler.rs  state.rs  switch.rs  syscall.rs  task.rs
src/: main.rs
user_programs/simple_test/: Cargo.toml
user_programs/simple_test/src/: main.rs
